(library
 (name chrome_trace_tests)
 (inline_tests)
 (libraries
  dune_tests_common
  stdune
  dune_stats
  chrome_trace
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.common)
 (preprocess
  (pps ppx_expect))
 (instrumentation
  (backend bisect_ppx)))
