(library
 (name dune_rpc_lwt_tests)
 (enabled_if
  (>= %{ocaml_version} 4.13))
 (inline_tests
  (deps
   (package dune)))
 (libraries
  dune_rpc
  csexp_rpc
  unix
  dune_engine
  csexp
  stdune
  lwt
  lwt.unix
  dune_rpc_lwt
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.common)
 (preprocess
  (pps ppx_expect)))
