(library
 (name stdune_unit_tests)
 (inline_tests
  (deps
   (source_tree ../unit-tests/findlib-db)
   (source_tree ../unit-tests/toolchain.d)))
 (libraries
  stdune
  dune_tests_common
  unix
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.common)
 (preprocess
  (pps ppx_expect)))
