(library
 (name dune_patch_tests)
 (inline_tests)
 (modules dune_patch_tests)
 (libraries
  dune_tests_common
  stdune
  fiber
  dune_patch
  dune_engine
  dune_util
  test_scheduler
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.common)
 (preprocess
  (pps ppx_expect)))
