(library
 (name fsevents_tests)
 (inline_tests
  (enabled_if
   (and
    (<> %{env:CI=false} true)
    (= %{system} macosx)))
  (deps
   (sandbox always)))
 (libraries
  fsevents
  stdune
  threads.posix
  unix
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.common)
 (preprocess
  (pps ppx_expect)))
